# mini-lattice

./: .gitignore  Cargo.toml
apps/viz_bevy/: Cargo.toml
apps/viz_bevy/src/: main.rs
data_model/: Cargo.toml
data_model/src/: entity.rs  lib.rs  location.rs  task.rs
snapshot_srv/: Cargo.toml
snapshot_srv/src/: main.rs
tests/: Cargo.toml
tests/src/: entity_test.rs  lib.rs
