[package]
name = "snapshot_srv"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "55.1.0"
arrow-flight = "55.1.0"
tonic = { version = "0.12.3", default-features = false, features = ["transport", "codegen", "prost"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }